--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,33 +1,15 @@
-<footer class="site-footer h-card">
-    <data class="u-url" href="{{ " /" | relative_url }}"></data>
+<footer class="site-footer">
+    <data class="u-url" href="{{ '/' | relative_url }}"></data>
 
-    <div class="wrapper">
-
-        <h2 class="footer-heading">{{ site.title | escape }}</h2>
-
-        <div class="footer-col-wrapper">
-            <div class="footer-col footer-col-1">
-                <ul class="contact-list">
-                    <li class="p-name">
-                        {%- if site.author -%}
-                        {{ site.author | escape }}
-                        {%- else -%}
-                        {{ site.title | escape }}
-                        {%- endif -%}
-                    </li>
-                    {%- if site.email -%}
-                    <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-                    {%- endif -%}
-                </ul>
+    <div class="container-fluid">
+        <div class="col-12 justify-content-between">
+            <div class="social">
+                <a class="social-link" href="https://twitter.com/alex_game_dev">Twitter</a>
+                <a class="social-link" href="https://www.linkedin.com/in/alejandro-orejudo/">LinkedIn</a>
             </div>
-
-            <div class="footer-col footer-col-2">
-                {%- include social.html -%}
+            <div class="feeds">
+                
             </div>
-
-            <!-- <div class="footer-col footer-col-3">
-          <p>{{- site.description | escape -}}</p>
-        </div> -->
         </div>
 
     </div>
