--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,17 +3,49 @@ layout: default
 ---
 
 <div class="home">
-    {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
-    {%- endif -%}
-
-    <h2>Sobre mi</h2>
-
-    <h2> Mis proyectos</h2>
-    {%- include main-posts-preview.html -%}
-
-    <h2> Blog </h2>
-    {%- include main-blog-preview.html -%}
-
+    <section class="first-section">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-4">
+                    <img src="/assets/img/icon.svg" class="img-fluid"/>
+                </div>
+            </div>
+            <h1 class="title text-center">Alex Game Dev</h1>
+            <div class="subtitle">
+                <span class="text-center">
+                    <span class="dynamic-span text-nowrap">
+                        <span>
+                            <span>🎮Game🎮</span>
+                            <span>🔧Tool🔧</span>
+                            <span>🌐Web🌐</span>
+                            <span>📱App📱</span>
+                            <span>🎮Game🎮</span>
+                        </span>
+                    </span>
+                    <span>Developer</span>
+                </span> 
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <h3 class="section-title">About me</h3>   
+            <a class="link-more" href="/about">Más sobre mi -></a>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <h3 class="section-title">My projects</h3>
+            {%- include main-posts-preview.html -%}
+            <a class="link-more" href="/work">More projects -></a>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <h3 class="section-title">Blog</h3>
+            {%- include main-blog-preview.html -%}
+            <a class="link-more" href="/blog">More posts -></a>
+        </div>
+    </section>
     {{ content }}
 </div>
