--- a/_includes/main-posts-preview.html
+++ b/_includes/main-posts-preview.html
@@ -2,21 +2,23 @@
     {% assign projects = site.categories['games'] | sort: 'date' | reverse | limit: 3 %}
     {% for project in projects %}
     <div class="col-12 col-md-6 project">
-        <a class="post-link un" href="{{ project.url}}">
-            <div class="row">
-                <div class="img-fitter">
-                    <img class="img-cover" src="{{ project.image }}" alt="{{ project.title }}">
+        <div class="post-container mb-4">
+            <a class="post-link un" href="{{ project.url}}">
+                <div class="row">
+                    <div class="img-fitter">
+                        <img class="img-cover" src="{{ project.image }}" alt="{{ project.title }}">
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div>
-                    {% for tag in project.tags %}
-                    <span class="uppercase light">{{tag}}</span>
-                    {% endfor %}
+                <div class="row">
+                    <div>
+                        {% for tag in project.tags %}
+                        <span class="uppercase light">{{tag}}</span>
+                        {% endfor %}
+                    </div>
                 </div>
-            </div>
-            <h3>{{ project.title }}</h3>
-        </a>
+                <h3>{{ project.title }}</h3>
+            </a>
+        </div>        
     </div>
     {% endfor %}
 </div>
