--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,34 @@ layout: default
 
 <section class="section">
     <div class="container">
-        {{ content }}
+        <div class="row justify-content-between">            
+            <div class="col-12 col-lg-8 col-xl-7">
+                <h1>{{page.title}}</h1>
+                <p class="details">
+                    <span>{{page.date | date: "%-d %B %Y"}}</span>
+                </p>
+                <div>
+                    <p>{{ page.summary }}</p>
+                    <div class="mb-5">
+                        <img class="img-fluid" src="{{ page.thumbnail }}" alt="{{ page.title}}">
+                    </div>
+                    {{ content }}
+                </div>
+            </div>
+        </div>
+        <div class="col-12 mt-5">
+            <h4>Otros posts</h4>
+            {% assign posts = site.categories['blog']| where_exp: "post", "post.id != page.id" | sort: date | reverse | limit: 3 %}
+            {% for post in posts %}
+                {% include post-entry.html 
+                    title=post.title
+                    date=post.date
+                    summary=post.summary
+                    thumbnail=post.thumbnail
+                    url=post.url
+                %}   
+            {% endfor %}
+            <a class="link" href="/blog">More posts</a>
+        </div>        
     </div>
 </section>
