--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -7,7 +7,8 @@ html{
 }
 
 body{
-    background-color: var(--background);
+    background-color: var(--color-background);
+    color: var(--color-text);
     display: flex;
     height: 100%;
     margin: 0;
@@ -28,6 +29,7 @@ header{
 
 footer
 {
+    border-top: 1px solid var(--color-border);
     padding: 0.4444em 0 3.556em;
 }
 
@@ -37,17 +39,17 @@ footer
 
 section{
     display: block;
-    padding: 3em 0;
+    padding: 5em 0;
 }
 
-.section:first-of-type, .first-section
+section:first-of-type, .first-section
 {
     padding-top: 8em;
 }
 
-.section
+.cover
 {
-    padding: 5em 0;
+    padding: 2rem 0;
 }
 
 a{
@@ -78,5 +80,9 @@ a{
 }
 
 .recent-projects{
-    margin-bottom: 3rem;
+    margin-bottom: 1.5rem;
+}
+
+.post-cover{
+    width: 100%;
 }
