--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,8 +1,50 @@
-html{
-    --background: #F8F8F8;
-    --color-text: var(--bs-body-color);
-    --color-title: #282435;
-    --color-theme: #7144ee;
-    --color-light: #00000040;
-    --color-light-title: #00000070;
+:root {
+    --type-serif: 'Work Sans', sans-serif;
+    --type-caps: "Piazzolla SC", serif;
+    --type-mono: "Hack", monospace;
+    --font-size: 22px;
+    --type-weight: 300;
+    --type-height: 1.4;
+    --type-numeric: oldstyle-nums proportional-nums;
+    --color-particles-text: var(--oc-gray-1);
+    --color-particles-background: var(--oc-gray-9);
 }
+
+html,
+html[data-theme="light"] {
+--color-background: var(--oc-gray-1);
+--color-background-light: #00000020;
+--color-text: var(--oc-gray-8);
+--color-heading: var(--oc-gray-8);
+--color-theme: var(--oc-violet-8);
+--color-tags: #00000040;
+--color-link: var(--oc-blue-8);
+--color-chunk: var(--oc-gray-8);
+--color-mark: var(--oc-yellow-3);
+--color-border: var(--oc-gray-4);
+--color-button: var(--oc-gray-6);
+}
+
+html[data-theme="dark"] {
+--color-background: #1A191F;
+--color-background-light: #00000020;
+--color-text: var(--oc-gray-3);
+--color-heading: var(--oc-gray-3);
+--color-theme: var(--oc-violet-8);
+--color-tags: hsla(0, 0%, 100%, 0.25);
+--color-link: var(--oc-blue-3);
+--color-chunk: var(--oc-gray-8);
+--color-mark: var(--oc-gray-8);
+--color-border: var(--oc-gray-7);
+--color-button: var(--oc-gray-7);
+}
+  
+
+// html{
+//     --color-background: #F8F8F8;
+//     --color-text: var(--bs-body-color);
+//     --color-heading: #282435;
+//     --color-link: #7144ee;
+//     --color-light: #00000040;
+//     --color-light-title: #00000070;
+// }
