FEAT - Dark theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,8 @@
         </div>
     </main>
     {%- include footer.html -%}
+    
+    <script src="{{ '/assets/js/darkmode.js' | relative_url }}"></script>
 </body>
 
 </html>
