--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,9 @@
     <title>{{site.title | Portfolio}}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ 'assets/css/open-color.css' | relative_url }}"/>
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="icon" href="{{site.icon}}" type="image/x-icon">
     {%- feed_meta -%}
     {%- if jekyll.environment == 'production' and site.google_analytics -%}
