--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,12 +15,16 @@
                     {%- assign my_page = site.pages | where: "path", path | first -%}
                     {%- if my_page.title -%}
                     <li>
-                        <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+                        <a class="page-link un" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
                     </li>                    
                     {%- endif -%}
                     {%- endfor -%}
                     {%- endif -%}
+                    <li>
+                        <a id="theme-toggle" onclick="modeSwitcher()"></a>
+                    </li>
                 </ul>
+                
             </div>
         </div>
     </div>   
