--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -14,10 +14,8 @@ body{
     margin: 0;
     flex-direction: column;
     font-family: 'Work Sans', sans-serif;
-    //font-family: 'Lato', sans-serif;
 }
 
-// Header fixed
 header{
     position: fixed;
     width: 100%;
@@ -27,10 +25,20 @@ header{
     padding: 2em 0;
 }
 
+.header-container{
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
+}
+
+
 footer
 {
     border-top: 1px solid var(--color-border);
-    padding: 0.4444em 0 3.556em;
+    padding: 1.4444em 0 3.556em;
+}
+
+.social{
+    font-size: 1.5rem;
 }
 
 .page-content{
@@ -47,42 +55,19 @@ section:first-of-type, .first-section
     padding-top: 8em;
 }
 
-.cover
-{
-    padding: 2rem 0;
-}
 
 a{
     text-decoration: none;
 }
 
-.img-cover
-{
+.w-100{
     width: 100%;
-    border-radius: 0.666em;
+}
+
+.img-16-9{
     aspect-ratio: 16/9;
-    display: block;
 }
 
 .logo{
     min-width: 50px;
-}
-
-.img-fitter
-{
-    margin: 0.8776rem 0;
-}
-
-.container-fluid
-{
-    padding-right: 2.5rem;
-    padding-left: 2.5rem;
-}
-
-.recent-projects{
-    margin-bottom: 1.5rem;
-}
-
-.post-cover{
-    width: 100%;
 }
