FEAT - Simplify scss

--- a/_includes/post-entry.html
+++ b/_includes/post-entry.html
@@ -3,7 +3,7 @@
     <div class="col-12 col-md-12 col-lg-10 mb-6">
         <div class="card-post d-flex">
             <div class="card-thumbnail">
-                <a class="post-link un" href="{{include.url}}">
+                <a href="{{include.url}}">
                     <img alt={{include.title}} src={{include.thumbnail | default: site.default_thumbnail}}>
                 </a>
             </div>
