--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,6 +47,7 @@ layout: default
                         summary=post.summary
                         tags=post.tags
                         thumbnail=post.image
+                        url=post.url
                     %} 
                 </div>
                 {% endfor %}
