--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <div class="container-fluid">
+    <div class="header-container">
         <div class="row justify-content-between align-items-center g-0">
             <div class="col-auto logo">
                 <a href="/">
