FEAT - Add github calendar in about section

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
                 </a>
                 {%- endif -%}
                 {%- if site.github -%}
-                <a href="{{site.github}}">
+                <a href="https://github.com/{{site.github_user}}">
                     <i class="devicon-github-original"></i>
                 </a>
                 {%- endif -%}
